force-app/main/default/objects/Richiesta_speciale__c/Richiesta_speciale__c.object-meta.xml
<CustomObject>
    <label>Richiesta speciale</label>
    <nameField>
        <label>Richiesta speciale</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Richieste speciali</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>