force-app/main/default/objects/Richiesta_speciale__c/fields/Ammontare_preventivo__c.field-meta.xml
<CustomField>
    <fullName>Ammontare_preventivo__c</fullName>
    <formula>Opportunita__r.Amount</formula>
    <label>Ammontare preventivo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>