force-app/main/default/objects/Richiesta_speciale__c/fields/Componenti__c.field-meta.xml
<CustomField>
    <fullName>Componenti__c</fullName>
    <label>Componenti</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>