force-app/main/default/objects/Richiesta_speciale__c/fields/Costo_preventivato__c.field-meta.xml
<CustomField>
    <fullName>Costo_preventivato__c</fullName>
    <label>Costo preventivato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>