force-app/main/default/objects/Richiesta_speciale__c/fields/Data_prevista_consegna__c.field-meta.xml
<CustomField>
    <fullName>Data_prevista_consegna__c</fullName>
    <label>Data prevista consegna</label>
    <type>Date</type>
</CustomField>