force-app/main/default/objects/Richiesta_speciale__c/fields/Descrizione_RS__c.field-meta.xml
<CustomField>
    <fullName>Descrizione_RS__c</fullName>
    <label>Descrizione RS</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>