force-app/main/default/objects/Richiesta_speciale__c/fields/Modello_macchina__c.field-meta.xml
<CustomField>
    <fullName>Modello_macchina__c</fullName>
    <label>Modello macchina</label>
    <length>200</length>
    <type>Text</type>
</CustomField>