force-app/main/default/objects/Richiesta_speciale__c/fields/Nome_opportunita__c.field-meta.xml
<CustomField>
    <fullName>Nome_opportunita__c</fullName>
    <formula>Opportunita__r.Name</formula>
    <label>Nome opportunità</label>
    <type>Text</type>
</CustomField>