force-app/main/default/objects/Richiesta_speciale__c/fields/Opportunita__c.field-meta.xml
<CustomField>
    <fullName>Opportunita__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunità</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Richieste speciali</relationshipLabel>
    <relationshipName>Richieste_speciali</relationshipName>
    <type>Lookup</type>
</CustomField>