force-app/main/default/objects/Richiesta_speciale__c/fields/Ore_progetto__c.field-meta.xml
<CustomField>
    <fullName>Ore_progetto__c</fullName>
    <label>Ore progetto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>