force-app/main/default/objects/Richiesta_speciale__c/fields/Status_verifica_tecnica__c.field-meta.xml
<CustomField>
    <fullName>Status_verifica_tecnica__c</fullName>
    <label>Status verifica tecnica</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approvata</fullName>
            </value>
            <value>
                <fullName>Non approvata</fullName>
            </value>
            <value>
                <fullName>Serve uno speciale</fullName>
            </value>
            <value>
                <fullName>RS approvata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>