force-app/main/default/objects/Richiesta_speciale__c/fields/Tempi_tecnici_di_realizzazione__c.field-meta.xml
<CustomField>
    <fullName>Tempi_tecnici_di_realizzazione__c</fullName>
    <label>Tempi tecnici di realizzazione</label>
    <type>TextArea</type>
</CustomField>