force-app/main/default/objects/Richiesta_speciale__c/fields/Tipo_richiesta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_richiesta__c</fullName>
    <label>Tipo richiesta</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analisi tecnica</fullName>
            </value>
            <value>
                <fullName>Richiesta speciale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>